logs/mip-family-analysis.log
Listing '.'...
Listing './bin'...
Compiling './bin/run_mip_family_analysis.py'...
***   File "./bin/run_mip_family_analysis.py", line 85
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mip_Family_Analysis'...
Listing './lib/python3.5/site-packages/Mip_Family_Analysis/Models'...
Listing './lib/python3.5/site-packages/Mip_Family_Analysis/Utils'...
Compiling './lib/python3.5/site-packages/Mip_Family_Analysis/Utils/header_parser.py'...
***   File "./lib/python3.5/site-packages/Mip_Family_Analysis/Utils/header_parser.py", line 111
    print 'Must specify the new header in metadata first'
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Mip_Family_Analysis/Utils/is_number.py'...
***   File "./lib/python3.5/site-packages/Mip_Family_Analysis/Utils/is_number.py", line 26
    print is_number(number)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Mip_Family_Analysis/Utils/pair_generator.py'...
***   File "./lib/python3.5/site-packages/Mip_Family_Analysis/Utils/pair_generator.py", line 23
    print 'List must include at least 2 objects!'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Mip_Family_Analysis/Utils/variant_sorter.py'...
***   File "./lib/python3.5/site-packages/Mip_Family_Analysis/Utils/variant_sorter.py", line 70
    print ''.join(lines)
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Mip_Family_Analysis/Variants'...
Compiling './lib/python3.5/site-packages/Mip_Family_Analysis/Variants/genotype.py'...
***   File "./lib/python3.5/site-packages/Mip_Family_Analysis/Variants/genotype.py", line 70
    print PL
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/interval_tree'...
Listing './lib/python3.5/site-packages/interval_tree-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/mip_family_analysis-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/ped_parser'...
Listing './lib/python3.5/site-packages/ped_parser-1.6.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
